--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
+    <title>Anushka's teams clone</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -18,6 +18,7 @@
   </head>
   <body>
     <div class="main">
+  <!-- Main left: Video Area-->
       <div class="main__left">
         <div class="main__videos">
           <div id="video-grid"></div>
@@ -42,29 +43,9 @@
             </div>
           </div>
 
-          <div class="main__controls_block">
-            <div class="main__controls_button">
-              <i class="fa fa-shield"></i>
-              <span>Security</span>
-            </div>
-            <div class="main__controls_button">
-              <i class="fa fa-users"></i>
-              <span>Participants</span>
-            </div>
-            <div class="main__controls_button">
-              <i class="fa fa-comment"></i>
-              <span>Chat</span>
-            </div>
-          </div>
-
-          <div class="main__controls_block">
-            <div class="main__controls_button leaveMeeting" id="leave-meeting">
-              <i class="fa fa-times"></i>
-              <span class="">Leave Meeting</span>
-            </div>
-          </div>
         </div>
       </div>
+      <!-- Main Right: Chat Area-->
       <div class="main__right">
         <div class="main__header">
           <h6>Chat</h6>
