--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,6 +12,7 @@
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
     <script src="/socket.io/socket.io.js"></script>
+     <!-- Passing the roomID here  -->
     <script>
       const ROOM_ID = "<%= roomId %>";
     </script>
@@ -48,7 +49,7 @@
       <!-- Main Right: Chat Area-->
       <div class="main__right">
         <div class="main__header">
-          <h6>Chat</h6>
+          <h6>In Call Messages</h6>
         </div>
         <div class="main__chat__window" id="main__chat__window">
           <ul class="messages" id="all_messages"></ul>
