--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,23 +3,22 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Anushka's teams clone</title>
+    <title>HOME</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="1.png" type="image/icon type">
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
     <script src="/socket.io/socket.io.js"></script>
-     <!-- Passing the roomID here  -->
     <script>
       const ROOM_ID = "<%= roomId %>";
     </script>
   </head>
   <body>
     <div class="main">
-  <!-- Main left: Video Area-->
       <div class="main__left">
         <div class="main__videos">
           <div id="video-grid"></div>
@@ -44,12 +43,32 @@
             </div>
           </div>
 
+          <div class="main__controls_block">
+            <div class="main__controls_button">
+              <i class="fa fa-shield"></i>
+              <span>Security</span>
+            </div>
+            <div class="main__controls_button">
+              <i class="fa fa-users"></i>
+              <span>Participants</span>
+            </div>
+            <div class="main__controls_button">
+              <i class="fa fa-comment"></i>
+              <span>Chat</span>
+            </div>
+          </div>
+
+          <div class="main__controls_block">
+            <div class="main__controls_button leaveMeeting" id="leave-meeting">
+              <i class="fa fa-times-circle"></i>
+              <span class="">Leave Meeting</span>
+            </div>
+          </div>
         </div>
       </div>
-      <!-- Main Right: Chat Area-->
       <div class="main__right">
         <div class="main__header">
-          <h6>In Call Messages</h6>
+          <h6>Chat</h6>
         </div>
         <div class="main__chat__window" id="main__chat__window">
           <ul class="messages" id="all_messages"></ul>
