added button for theme toggler

--- a/public/redirect/redirect.css
+++ b/public/redirect/redirect.css
@@ -34,12 +34,12 @@ a {
 }
 @import url(https://fonts.googleapis.com/css?family=Roboto:300);
 
-.login-page {
+.message-box {
   width: 360px;
   padding: 8% 0 0;
   margin: auto;
 }
-.form {
+.message {
   position: relative;
   z-index: 1;
   background: #ffffff;
