--- a/views/room.ejs
+++ b/views/room.ejs
@@ -4,12 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HOME</title>
+   <!-- emoticon -->
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css" integrity="sha512-vEia6TQGr3FqC6h55/NdU3QSM5XR6HSl5fW71QTKrgeER98LIMGwymBVM867C1XHIkYD9nMTfWK2A0xcodKHNA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
+
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
     <link rel="icon" href="1.png" type="image/icon type">
+   
+
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
     <script src="/socket.io/socket.io.js"></script>
@@ -21,7 +26,8 @@
     <div class="main">
       <div class="main__left">
         <div class="main__videos">
-          <div id="video-grid"></div>
+          <div id="video-grid">
+          </div>
         </div>
         <div class="main__controls">
           <div class="main__controls_block">
@@ -44,14 +50,14 @@
           </div>
 
           <div class="main__controls_block">
-            <div class="main__controls_button">
-              <i class="fa fa-shield"></i>
-              <span>Security</span>
+            <div class="main__controls_button " id="toggle">
+              <i class="fa fa-bullseye"></i>
+              <span >Toggle Theme</span>
             </div>
-            <div class="main__controls_button">
+            <!-- <div class="main__controls_button">
               <i class="fa fa-users"></i>
               <span>Participants</span>
-            </div>
+            </div> -->
             <div class="main__controls_button">
               <i class="fa fa-comment"></i>
               <span>Chat</span>
@@ -76,12 +82,23 @@
         <div class="main__message_container">
           <input
             type="text"
-            id="chat_message"
+            id="chat_message" class="emoji"
             placeholder="Type message here.."
           />
         </div>
       </div>
     </div>
-    <script src="script.js"></script>
+   
+    <!-- emoticon start-->
+    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js" integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script type="text/javascript">
+    $('.emoji').emojioneArea({
+      pickerPosition:'top'
+    });
+  </script> -->
+ <!-- emoticon end-->
+
+ <script src="script.js"></script>
   </body>
 </html>
