--- a/views/room.ejs
+++ b/views/room.ejs
@@ -58,9 +58,9 @@
               <i class="fa fa-users"></i>
               <span>Participants</span>
             </div> -->
-            <div class="main__controls_button">
-              <i class="fa fa-comment"></i>
-              <span>Chat</span>
+            <div class="main__controls_button" id="grayscale">
+              <i class="fa fa-tint"></i>
+              <span>GrayScale</span>
             </div>
           </div>
 
