video-filters-added: grayscale, contrast, sepia

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -58,10 +58,19 @@
               <i class="fa fa-users"></i>
               <span>Participants</span>
             </div> -->
-            <div class="main__controls_button" id="grayscale">
+              <!-- filters for video -->
+               <div class="main__controls_button">
+                 <div class="dropup">
               <i class="fa fa-tint"></i>
-              <span>GrayScale</span>
+              <span class="dropbtn">Video Filter</span>
+              <div class="dropup-content">
+         <p id="grayscale"> Grayscale</p>
+         <p id="contrast"> Contrast</p>
+         <p id="sepia"> Sepia</p>
+              </div>
             </div>
+               </div>
+            
           </div>
 
           <div class="main__controls_block">
