--- a/public/style.css
+++ b/public/style.css
@@ -39,9 +39,60 @@ video {
 .main-toggle {
   filter: invert(1) hue-rotate(180deg);
 }
+
+/* for grayscale */
 .filter-grayscale {
   filter: grayscale(100%);
 }
+
+/* for contrast */
+.filter-contrast {
+  filter: contrast(150%);
+}
+
+/* for sepia */
+.filter-sepia {
+  filter: sepia(150%);
+}
+/* for video filter */
+.dropup {
+  position: relative;
+  display: inline-block;
+}
+
+.fa-tint {
+  padding-left: 30px;
+}
+.dropup-content {
+  display: none;
+  position: absolute;
+  background-color: #383838;
+  min-width: 160px;
+  bottom: 50px;
+  z-index: 1;
+  border-radius: 10px;
+}
+
+.dropup-content p {
+  color: white;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropup-content p:hover {
+  background-color: rgb(122, 122, 122);
+  border-radius: 10px;
+}
+
+.dropup:hover .dropup-content {
+  display: block;
+}
+
+.dropup:hover .dropbtn {
+  background-color: #34383b;
+}
+/* video filter end  */
 .main__left {
   flex: 0.8;
   display: flex;
