--- a/views/room.ejs
+++ b/views/room.ejs
@@ -3,33 +3,31 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>HOME</title>
-   <!-- emoticon -->
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.css" integrity="sha512-vEia6TQGr3FqC6h55/NdU3QSM5XR6HSl5fW71QTKrgeER98LIMGwymBVM867C1XHIkYD9nMTfWK2A0xcodKHNA==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
-
+    <title>Anushka's Teams</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <link rel="icon" href="1.png" type="image/icon type">
-   
+    <link rel="icon" href="1.png" />
 
     <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-      const ROOM_ID = "<%= roomId %>";
+      const ROOM_ID = '<%= roomId %>';
     </script>
   </head>
   <body>
     <div class="main">
       <div class="main__left">
+        <!-- Video-Section -->
         <div class="main__videos">
-          <div id="video-grid">
-          </div>
+          <div id="video-grid"></div>
         </div>
+        <!-- End Video Section -->
         <div class="main__controls">
+          <!-- Footer Buttons -->
           <div class="main__controls_block">
             <div
               class="main__controls_button"
@@ -50,29 +48,23 @@
           </div>
 
           <div class="main__controls_block">
-            <div class="main__controls_button " id="toggle">
+            <div class="main__controls_button" id="toggle">
               <i class="fa fa-bullseye"></i>
-              <span >Toggle Theme</span>
+              <span>Toggle Theme</span>
             </div>
-            <!-- <div class="main__controls_button">
-              <i class="fa fa-users"></i>
-              <span>Participants</span>
-            </div> -->
-              <!-- filters for video -->
-               <div class="main__controls_button">
-                 <div class="dropup">
-              <i class="fa fa-tint"></i>
-              <span class="dropbtn">Video Filter</span>
-              <div class="dropup-content">
-         <p id="grayscale"> Grayscale</p>
-         <p id="contrast"> Contrast</p>
-         <p id="sepia"> Sepia</p>
+            <!-- filters for video -->
+            <div class="main__controls_button">
+              <div class="dropup">
+                <i class="fa fa-tint"></i>
+                <span class="dropbtn">Video Filter</span>
+                <div class="dropup-content">
+                  <p id="grayscale">Grayscale</p>
+                  <p id="contrast">Contrast</p>
+                  <p id="sepia">Sepia</p>
+                </div>
               </div>
             </div>
-               </div>
-            
           </div>
-
           <div class="main__controls_block">
             <div class="main__controls_button leaveMeeting" id="leave-meeting">
               <i class="fa fa-times-circle"></i>
@@ -81,6 +73,9 @@
           </div>
         </div>
       </div>
+      <!-- End Footer Butoons Section  -->
+
+      <!-- CHAT -->
       <div class="main__right">
         <div class="main__header">
           <h6>Chat</h6>
@@ -91,23 +86,14 @@
         <div class="main__message_container">
           <input
             type="text"
-            id="chat_message" class="emoji"
+            id="chat_message"
             placeholder="Type message here.."
           />
         </div>
       </div>
+      <!-- End Chat Section  -->
     </div>
-   
-    <!-- emoticon start-->
-    <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/emojionearea/3.4.2/emojionearea.min.js" integrity="sha512-hkvXFLlESjeYENO4CNi69z3A1puvONQV5Uh+G4TUDayZxSLyic5Kba9hhuiNLbHqdnKNMk2PxXKm0v7KDnWkYA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script type="text/javascript">
-    $('.emoji').emojioneArea({
-      pickerPosition:'top'
-    });
-  </script> -->
- <!-- emoticon end-->
 
- <script src="script.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
