Landing page added and linked

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -78,7 +78,7 @@
       <!-- CHAT -->
       <div class="main__right">
         <div class="main__header">
-          <h6>Chat</h6>
+          <h6>Chat &nbsp <i class="fa fa-comments"></i></h6>
         </div>
         <div class="main__chat__window" id="main__chat__window">
           <ul class="messages" id="all_messages"></ul>
@@ -93,7 +93,6 @@
       </div>
       <!-- End Chat Section  -->
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
