--- a/views/room.ejs
+++ b/views/room.ejs
@@ -64,6 +64,7 @@
                 </div>
               </div>
             </div>
+            <!-- End filters -->
           </div>
           <div class="main__controls_block">
             <div class="main__controls_button leaveMeeting" id="leave-meeting">
